2014-07-25  Filip Pizlo  <fpizlo@apple.com>

        Merge r170090, r170092, r170129, r170141, r170161, r170215, r170275, r170375, r170376, r170382, r170383, r170399, r170436, r170489, r170490, r170556 from ftlopt.

    2014-06-27  Michael Saboff  <msaboff@apple.com>
    
            Unreviewed build fix after r169795.
    
            Fixed ASSERT for 32 bit build.
    
            * dfg/DFGSpeculativeJIT.cpp:
            (JSC::DFG::SpeculativeJIT::silentSavePlanForGPR):
    
    2014-06-24  Saam Barati  <sbarati@apple.com>
    
            Web Inspector: debugger should be able to show variable types
            https://bugs.webkit.org/show_bug.cgi?id=133395
    
            Reviewed by Filip Pizlo.
    
            Increase the amount of type information the VM gathers when directed
            to do so. This initial commit is working towards the goal of
            capturing, and then showing (via the Web Inspector) type information for all
            assignment and load operations. This patch doesn't have the feature fully 
            implemented, but it ensures the VM has no performance regressions
            unless the feature is specifically turned on.
    
            * JavaScriptCore.xcodeproj/project.pbxproj:
            * bytecode/BytecodeList.json:
            * bytecode/BytecodeUseDef.h:
            (JSC::computeUsesForBytecodeOffset):
            (JSC::computeDefsForBytecodeOffset):
            * bytecode/CodeBlock.cpp:
            (JSC::CodeBlock::dumpBytecode):
            (JSC::CodeBlock::CodeBlock):
            (JSC::CodeBlock::finalizeUnconditionally):
            * bytecode/CodeBlock.h:
            * bytecode/Instruction.h:
            * bytecode/TypeLocation.h: Added.
            (JSC::TypeLocation::TypeLocation):
            * bytecompiler/BytecodeGenerator.cpp:
            (JSC::BytecodeGenerator::emitMove):
            (JSC::BytecodeGenerator::emitProfileTypesWithHighFidelity):
            (JSC::BytecodeGenerator::emitPutToScope):